--- a/CRUD/package.json
+++ b/CRUD/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
